# dsba-itop2022-hw

./: CMakeLists.txt  README.md  about_window.cpp  about_window.h  about_window.ui  addstore_window.cpp  addstore_window.h  addstore_window.ui  deletestore_window.cpp  deletestore_window.h  deletestore_window.ui  editstore_window.cpp  editstore_window.h  editstore_window.ui  editting_form.cpp  editting_form.h  editting_form.ui  findclosest.cpp  findclosest.h  findclosest.ui  logowidget.cpp  logowidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rapidcsv.h  store.cpp  store.h  store_model.cpp  store_model.h
Report/: Store planner software project report.md
